--- a/src/components/header.css
+++ b/src/components/header.css
@@ -16,5 +16,21 @@
     font-size: 17px;
   }
   
-
+  .viewmenu{
+    -webkit-font-smoothing: antialiased;
+    text-size-adjust: 100%;
+    font-family: "Hind",sans-serif;
+    line-height: 1.5em;
+    text-align: center;
+    -webkit-tap-highlight-color: transparent;
+    text-decoration: none;
+    cursor: pointer;
+    border-bottom: 1px solid;
+    font-weight: 800;
+    padding-bottom: 8px;
+    text-transform: uppercase;
+    color: #ddaa44;
+    border-color: #ddaa44;
+    
+}
   
